# restaurant-service

./: Cargo.toml  README.md
neardev/: dev-account  dev-account.env
src/: info.rs  lib.rs  menu.rs  payment.rs  payments.rs  temp.txt
src/commands/: README.md
src/presentention/: README.md  preset-restaurant.md
